--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,9 @@
       href="src/components/Icons/SVG/PhilanthrifyLogo.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ADDED FOR CSP REMOVE IF INEFFECTIVE-->
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' https://res.cloudinary.com;">
+    <!-- END-->
     <title>Philanthrify</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
